# IK-FABRIK

./: Arm.h  CMakeLists.txt  Fabrik.cpp  Fabrik.h  main.cpp
src/: Arm.cpp  Arm.h  ArmSegment.cpp  ArmSegment.h  main.cpp
